tests/pass/check/imported_global_namespace/UI.kira
construct Widget {
    annotations {
        @State;
        @Doc;
    }

    requires {
        content;
    }

    lifecycle {
        onAppear() {}
    }
}

Widget Card(title: String) {
    @State
    let selected: Int = 0;

    content {
        "Card"
    }

    onAppear() {
        return;
    }
}
