tests/fail/semantics/illegal_construct_annotation/main.kira
construct Widget {
    annotations {
        @State;
    }

    requires {
        content;
    }

    lifecycle {
        onAppear() {}
    }
}

Widget Card() {
    @Binding
    let selected: Int = 0;

    content {
        Text("Card")
    }
}
